@startuml

class UploadInterviewController {
    + getApplications(): Iterable<jobApplication>
    + uploadTextFile(application: jobApplication, path: String)
    + passGrammar(path: String): boolean

}

class UploadInterviewUI {
    - controller: UploadInterviewController
    + doShow(): boolean
    + headline(): String

}

class ApplicationService {
    + findAll(): Iterable
    + uploadInterviewResponses(application: jobApplication, responses: String)
}

class jobApplication

UploadInterviewUI --> UploadInterviewController
UploadInterviewController --> ApplicationService
UploadInterviewController --> jobApplication

@enduml
